[tool.poetry]
name = "roadblock"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Shaun S"]
description = "Chained multiple exception handler for Python"
homepage = "https://github.com/shaunrs/python-roadblock"
repository = "https://github.com/shaunrs/python-roadblock"
readme = "README.md"
keywords = [
    "decorator",
    "decorators",
    "exception",
    "callback",
    "recurse",
    "recursive",
    "roadblock",
    "patch",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
black = "^21.7b0"
hypothesis = "^6.14.8"
isort = "^5.9.3"
flake8 = "^3.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-black = "^0.2.3"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
coverage = {extras = ["toml"], version = "^5.5"}

[build-system]
requires = [
    "poetry-core>=1.0.0",
]

build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 140

# Ignore line-too-long, and use BugBear's B9 fuzzy line length checking instead
ignore = "E501"

# B = BugBear
# B9 = BugBear Extended
# BLK = Black formatter error
# I = iSort import ordering error
# S = Bandit (S)ecurity notices
# C,E,F,W = Flake8
select = "B,B9,BLK,I,S,C,E,F,W"

# Bandit marks `assert` as being unsafe, but it is fine to ignore in tests
per-file-ignores = [
    "tests/*:S101",
]

exclude = [
    "__init__.py",
]

[tool.isort]
profile = "black"
skip = [
    "__init__.py",
]

[tool.coverage.run]
branch = true
source = ["roadblock"]

[tool.coverage.report]
show_missing = true
fail_under = 95

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "if __name__ == .__main__.:"
]

[tool.pytest.ini_options]
required_plugins = ["pytest-cov"]
log_cli = true
testpaths = [
    "tests",
]

addopts = "--cov"
